--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "^3.3.1",
+    "@vue/cli-service": "~5.0.0",
+    "@vue/compiler-sfc": "^3.5.13",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "sass": "^1.32.7",
